// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography should match snapshots body1 1`] = `
<DocumentFragment>
  <p
    class="sc-bgqQcB ciRvxv"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots body2 1`] = `
<DocumentFragment>
  <p
    class="sc-bgqQcB eCuYeS"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots body3 1`] = `
<DocumentFragment>
  <p
    class="sc-bgqQcB eBLtca"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots h1 1`] = `
<DocumentFragment>
  <p
    class="sc-bgqQcB fLFrDT"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots head 1`] = `
<DocumentFragment>
  <p
    class="sc-bgqQcB cgRXLP"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots subtitle 1`] = `
<DocumentFragment>
  <p
    class="sc-bgqQcB bqiEPL"
  >
    Text goes here
  </p>
</DocumentFragment>
`;

exports[`Typography should match snapshots title 1`] = `
<DocumentFragment>
  <p
    class="sc-bgqQcB goFeVO"
  >
    Text goes here
  </p>
</DocumentFragment>
`;
